--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #2e2e2e;
+    background: #161616;
     color: #fff;
     font-family: Arial, sans-serif;
     display: flex;
@@ -32,7 +32,7 @@ body {
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    margin: 5px;
+    margin: 1px;
     font-weight: bold;
   }
   
@@ -57,7 +57,7 @@ body {
     gap: 10px;
   }
   .gearBox {
-    background: #333;
+    background: #161616;
     padding: 10px;
     border-radius: 10px;
     text-align: center;
@@ -65,6 +65,7 @@ body {
   .gearBox button {
     background: #007bff;
     color: white;
+    text-align: center;
     width: 100%;
   }
   .gearBox button:hover {
@@ -72,14 +73,14 @@ body {
   }
   
   .serialMonitor {
-    background: #333;
-    padding: 10px;
+    background: #161616;
+    padding: 35px;
     border-radius: 10px;
     margin-bottom: 20px;
   }
   textarea {
     width: 100%;
-    background: #000;
+    background: #202020;
     color: #0f0;
     font-family: monospace;
     border-radius: 6px;
@@ -89,12 +90,12 @@ body {
   }
   
   .sendBox {
-    background: #333;
+    background: #161616;
     padding: 10px;
     border-radius: 10px;
   }
   .sendBox input {
-    width: 100%;
+    width: 98%;
     padding: 8px;
     border-radius: 6px;
     border: none;
